--- a/Lab3/css/style.css
+++ b/Lab3/css/style.css
@@ -1,4 +1,70 @@
 body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.container {
+    width: calc(100% - 100px);
+    margin: 50px auto;
+    background: #fff;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    min-height: calc(100vh - 100px);
+}
+
+.header {
+    background: #66a3d2;
+    padding: 20px;
     text-align: center;
-    font-family: Arial, sans-serif;
+    height: 50px;
+}
+.text {
+    background: #c8e6a5;
+    padding: 20px;
+    box-sizing: border-box;
+    height: 450px;
+}
+.sideimg {
+    background: #9ccc65;
+    padding: 20px;
+    box-sizing: border-box;
+    height: 450px;
+}
+.footer {
+    background: #80deea;
+    padding: 20px;
+    text-align: center;
+}
+
+/* --- FLOAT --- */
+.float .main {
+    overflow: hidden; 
+}
+.float .text {
+    float: left;
+    width: 70%;
+}
+.float .sideimg {
+    float: left;
+    width: 30%;
+}
+.float .footer {
+    clear: both;
+}
+
+/* --- FLEX --- */
+.flex {
+    display: flex;
+    flex-direction: column;
+}
+.flex .main {
+    display: flex;
+    flex-direction: row;
+}
+.flex .text {
+    flex: 70%;
+}
+.flex .sideimg {
+    flex: 30%;
 }
