--- a/Lab4/css/style.css
+++ b/Lab4/css/style.css
@@ -11,19 +11,11 @@ body {
   color: #111827;
 }
 
-header,
 main,
 footer {
   max-width: 860px;
   margin: 0 auto;
   padding: 16px;
-}
-
-header {
-  background: white;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-  position: sticky;
-  top: 0;
 }
 
 h1 {
@@ -69,3 +61,39 @@ ol {
 a {
   color: #0f766e;
 }
+
+.colored1 {
+  background-color: #4caf50;
+  color: white;
+  transition: 0.3s;
+}
+
+.colored2 {
+  background-color: #ffd504;
+  color: rgb(141, 0, 0);
+  transition: 0.3s;
+}
+
+.default {
+  background-color: transparent;
+  color: black;
+  transition: 0.3s;
+}
+
+.img-wrapper {
+  margin: 10px 0;
+  width: 100%;  
+  height: 100%;
+  overflow: hidden; 
+  position: relative;
+}
+
+.img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(1);
+  transform-origin: center center;
+  transition: transform 0.2s ease;
+}
+
