--- a/Lab5/css/style.css
+++ b/Lab5/css/style.css
@@ -1,4 +1,62 @@
 body {
-    text-align: center;
-    font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif;
+  background: #f9f9f9;
+}
+
+.input_title {
+    margin: 14px 0 5px 0;
+}
+
+.form_buttons {
+    margin-top: 10px;
+}
+
+.form_wrapper {
+  display: flex;   
+  justify-content: center; 
+  align-items: center;      
+  gap: 40px;                 
+  padding: 20px;
+}
+
+form {
+  width: 300px;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 8px 10px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  box-sizing: border-box;
+  transition: border 0.2s, background 0.2s;
+}
+
+.error {
+  color: red;
+  font-size: 14px;
+  display: block;
+  height: 10px;    
+  margin-bottom: 8px;
+}
+
+.invalid {
+  border: 1px solid red;
+}
+
+#result {
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: 300px;
+  height: 100%;
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+#result h3 {
+  margin-top: 0;
 }
