--- a/Lab5/css/style.css
+++ b/Lab5/css/style.css
@@ -17,6 +17,7 @@ body {
   align-items: center;      
   gap: 40px;                 
   padding: 20px;
+  margin: 40px 0;
 }
 
 form {
@@ -39,12 +40,13 @@ textarea {
   color: red;
   font-size: 14px;
   display: block;
-  height: 10px;    
+  min-height: 18px;
   margin-bottom: 8px;
 }
 
 .invalid {
   border: 1px solid red;
+  background-color: #ffe6e6;
 }
 
 #result {
@@ -59,4 +61,32 @@ textarea {
 
 #result h3 {
   margin-top: 0;
+}
+
+
+table {
+    border-collapse: collapse;
+}
+
+td {
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border: 1px solid #333;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+input[type="color"] {
+    margin-bottom: 20px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.table_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+    gap: 10px;             
+    margin-bottom: 20px;
 }
