--- a/Lab6/css/style.css
+++ b/Lab6/css/style.css
@@ -64,12 +64,16 @@ button:hover {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
 
+#result .row {
+  margin: 25px 0;
+  font-size: 15px;
+}
+
 .user-card img {
-  width: 110px;
-  height: 110px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 10px;
+  width: 100%;
+  aspect-ratio: 1/1;  /* квадрат */
+  object-fit: cover; 
+  border-radius: 12px;
   border: 3px solid #5d4fa1;
 }
 
